# autom8y-workflows

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  fleet-conformance-spec.yml  pyproject.toml  renovate-preset.json  renovate.json
.github/actions/fleet-conformance-gate/: action.yml  validate_pyproject.py
.github/actions/validate-env-injection/: action.yml
.github/workflows/: ci.yml  dependency-review.yml  gitleaks.yml  propagate-reusable-pin.yml  satellite-ci-reusable.yml  scorecard.yml  security-dependency-review.yml  security-gitleaks.yml  security-scorecard.yml  security-trufflehog.yml  security-zizmor.yml  trufflehog-scan.yml  zizmor.yml
.ledge/reviews/: qa-si-1-self-ci.md
templates/: aegis-synthetic-coverage.yml.template
tests/: test_validate_pyproject.py  test_workflow_validation.py
