[project]
name = "autom8y-workflows-tests"
version = "0.1.0"
description = "Test infrastructure for autom8y-workflows reusable GitHub Actions workflows"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
